[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/LevelWinner.gd" type="Script" id=1]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/PNG/You_Lose/Replay_BTN.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/PNG/You_Win/Star_03.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/PNG/You_Lose/Table.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/PNG/You_Win/Header.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/PNG/You_Lose/Window.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/PNG/You_Lose/Record.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/PNG/Buttons/BTNs_Active/Play_BTN.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/PNG/You_Win/Star_02.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/PNG/You_Win/Score.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 2 )

[node name="LevelWinnerTwoStar" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Panel" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -441.0
margin_top = -350.0
margin_right = 1107.0
margin_bottom = 1054.0
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 7 )
expand = true

[node name="Title" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -326.0
margin_right = 229.0
margin_bottom = -266.0
texture = ExtResource( 6 )

[node name="StarOne" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.0
margin_top = -140.0
margin_right = -54.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="StarTwo" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -230.0
margin_right = 246.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="StartThree" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 224.0
margin_top = -140.0
margin_right = 516.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Score" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3.5
margin_top = 21.5
margin_right = 364.5
margin_bottom = 122.5
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 5 )

[node name="ScoreTitle" type="Sprite" parent="Control/Score"]
position = Vector2( -208, 48 )
texture = ExtResource( 11 )

[node name="Score" type="Label" parent="Control/Score"]
margin_left = 144.167
margin_top = 11.0
margin_right = 420.167
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.0
margin_top = 164.0
margin_right = 365.0
margin_bottom = 380.0
rect_scale = Vector2( 0.8, 0.8 )
custom_constants/separation = 158

[node name="Retry" type="Button" parent="Control/VBoxContainer"]
pause_mode = 2
margin_right = 222.0
margin_bottom = 216.0
icon = ExtResource( 3 )
flat = true

[node name="Next" type="Button" parent="Control/VBoxContainer"]
pause_mode = 2
margin_left = 380.0
margin_right = 602.0
margin_bottom = 216.0
icon = ExtResource( 9 )
flat = true

[node name="RecordActual" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 3.5
margin_top = 93.5
margin_right = 364.5
margin_bottom = 194.5
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 5 )

[node name="RecordTitle" type="Sprite" parent="Control/RecordActual"]
position = Vector2( -189.167, 59 )
texture = ExtResource( 8 )

[node name="Record" type="Label" parent="Control/RecordActual"]
margin_left = 154.167
margin_top = 13.0
margin_right = 430.167
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )

[connection signal="pressed" from="Control/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Next" to="." method="_on_Next_pressed"]
